flickering fixes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,14 @@ html{
 	-webkit-backface-visibility:hidden;
 	backface-visibility: hidden;
 }
+.ui-mobile{
+	-webkit-backface-visibility:hidden;
+	backface-visibility: hidden;
+}
+.ui-mobile-viewport{
+	-webkit-backface-visibility:hidden;
+	backface-visibility: hidden;
+}
 body.background { 
 	background: #f1fcff;
     margin: 0;
